postgres and consumer dockers

--- a/dockers/producer/config.ini
+++ b/dockers/producer/config.ini
@@ -1,8 +1,8 @@
 [KAFKA]
-#host = host.docker.internal:9092
-host = 0.0.0.0:9092
+host = host.docker.internal:9092
 topic = oetker
 group_id = group-1
 
 [DATA]
 url = https://storage.googleapis.com/datascience-public/data-eng-challenge/MOCK_DATA.json
+db = dbname=oetker user=postgres host=host.docker.internal password=docker port=5431
