added live mode
no delay

--- a/dockers/consumer/config.ini
+++ b/dockers/consumer/config.ini
@@ -1,7 +1,7 @@
 [KAFKA]
 host = host.docker.internal:2181
-topic = test
-group_id = mymirror
+topic = oetker
+group_id = group-1
 
 [DATA]
 db = oetker
