Readme, producer changes, monitoring

--- a/dockers/producer/config.ini
+++ b/dockers/producer/config.ini
@@ -6,3 +6,4 @@ group_id = group-1
 [DATA]
 url = https://storage.googleapis.com/datascience-public/data-eng-challenge/MOCK_DATA.json
 db = dbname=oetker user=postgres host=host.docker.internal password=docker port=5431
+#db = dbname=oetker user=postgres host=localhost password=docker port=5431
