--- a/dockers/producer/Dockerfile
+++ b/dockers/producer/Dockerfile
@@ -5,9 +5,10 @@ WORKDIR /app
 
 # Copy the current directory contents into the container at /app
 COPY . /app
+RUN chmod +x start.sh
 
 # Install the package
 RUN pip3 install -r requirements.txt
 
 # Run this when the container starts
-CMD ["python3", "producer.py"]
+ENTRYPOINT ["sh", "start.sh"]
